# ppp

./: activate.bat  pyproject.toml  r.bat  requirements.txt
ppp/basic-app/: app.py  app2.py  test.py
ppp/rsconnect-python/: ppp.json
