[tool.poetry]
name = "ppp"
version = "0.1.0"
description = ""
authors = ["Jim Collinsworth <jimcollinsworth@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pd = "^0.0.4"
shiny = "^0.6.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
